-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: jfx11, jfx12
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8229460 | jfx11.0.4 | Arunprasad Rajkumar | P2 | Closed | Fixed | |
| JDK-8219965 | 8u221 | Arunprasad Rajkumar | P2 | Closed | Fixed | b01 |
- backported by
-
JDK-8219965 [WebView] Get rid of macOS SDK private API usage
-
- Closed
-
-
JDK-8229460 [WebView] Get rid of macOS SDK private API usage
-
- Closed
-
- links to