8219734: [WebView] Get rid of macOS SDK private API usage

Reviewed-by: kcr, mbilla